# gb_fireS6

./: README.md  compare_outputs.py  filters.py  fire_detection_main.py  fire_detection_main_single.py  fire_detector.py  fire_loc_spot.py  inference.py  main.py  main_backup.py  main_frame.py  model_common.py  outlier_queue.py  utils.py
cpp/: CMakeLists.txt  FireDetector.cpp  FireDetector.hpp  main.cpp  main_single.cpp
